Fix: remove redis and adjust getUsername and /chname

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="chatbox"></div>
     <form id="messageForm">
-        <input type="hidden" id="name" value="anonymous" />
+        <input type="hidden" id="name" value="" />
         <input type="text" id="message" autocomplete="off" required />
         <button type="submit">Send</button>
     </form>
