Fix: message style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,11 @@
     <body>
         <div class="container">
             <div id="chatbox" class="chat-container"></div>
-            <div id="messageForm">
+            <form id="messageForm">
                 <input type="hidden" id="name" value="" />
                 <input id="message" type="text" class="form-control">
                 <button id="send" class="btn btn-primary" type="submit">Send</button>
-            </div>
+            </form>
         </div>
         <script src="script.js"></script>
     </body>
